@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.videang" name="Videa Next Generation" version="1.0.8" provider-name="vargalex">
+<addon id="plugin.video.videang" name="Videa Next Generation" version="1.0.9" provider-name="vargalex">
 	<extension point="xbmc.python.pluginsource" library="default.py">
 		<provides>video</provides>
 	</extension>
@@ -9,8 +9,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news>
-			- Felirat letöltés megvalósítása (beállításokban kapcsolható)
-			- Közvetlen URL lejátszása
+			- Bejelentkezés megvalósítása
 		</news>
 		<assets>
 		  <icon>icon.png</icon>
